--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,10 @@
 name: dart_extensions
-description: A starting point for Dart libraries or applications.
+description: A set of dart extensions that I use in various projects.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/mj12358/dart-extensions
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
-
-# dependencies:
-#   path: ^1.8.0
+  sdk: ">=2.18.4 <3.0.0"
 
 dev_dependencies:
   lints: ^2.0.0
