change package name (the other was already taken)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dart_extensions
+name: dart_extensionz
 description: A set of dart extensions that I use in various projects.
 version: 1.0.0
 repository: https://github.com/mj12358/dart-extensions
