--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dart_extensionz
-description: A set of dart extensions that I use in various projects.
-version: 1.0.0
+description: A set of dart extensions I use in various projects. Including Boolean, DateTime extensions and more.
+version: 1.0.1
 repository: https://github.com/mj12358/dart-extensions
 
 environment:
