--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: dart_extensionz
 description: A set of Dart extensions I use in various projects. Including Boolean, DateTime extensions and more.
-version: 1.3.0
+version: 1.4.0
 repository: https://github.com/mj12358/dart-extensions
 
 environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dev_dependencies:
-  lints: ^2.0.0
+  dart_lintz: ^1.0.0
+  file: ^6.1.4
   test: ^1.16.0
