--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,12 @@
 name: dart_extensionz
 description: A set of Dart extensions I use in various projects. Including Boolean, DateTime extensions and more.
-version: 4.7.0
+version: 4.7.1
 repository: https://github.com/mj12358/dart-extensionz
+funding:
+  - https://www.buymeacoffee.com/mj12358
+topics:
+  - dart
+  - extension
 
 environment:
   sdk: ">=2.19.2 <4.0.0"
