--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dart_extensionz
 description: A set of Dart extensions I use in various projects. Including Boolean, DateTime extensions and more.
-version: 5.0.0
+version: 5.1.0
 repository: https://github.com/mj12358/dart-extensionz
 funding:
   - https://www.buymeacoffee.com/mj12358
@@ -11,10 +11,13 @@ topics:
 environment:
   sdk: ">=2.19.2 <4.0.0"
 
+dependencies:
+  intl: ^0.18.1
+
 dev_dependencies:
   # dart run coverage:test_with_coverage
   coverage: ^1.6.3
-  dart_lintz: ^1.1.0
+  dart_lintz: ^1.2.1
   file: ^6.1.4
   path: ^1.8.3
   test: ^1.16.0
