--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -25,21 +25,11 @@ jobs:
         run: |
           echo "NEW_TAG=v${{ steps.pubspec.outputs['version'] }}" >> $GITHUB_ENV
 
-      - name: Create Tag
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PAT }}
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/tags/${process.env.NEW_TAG}`,
-              sha: context.sha
-            })
-
-      - name: Push Tag
+      - name: Create and Push Tag
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github-actions@users.noreply.github.com"
           git tag $NEW_TAG
           git push origin $NEW_TAG
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
