update create tag workflow

--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch all history for tags
+          token: ${{ secrets.PAT }}  # Use PAT for checkout too
 
       - name: Read pubspec.yaml
         id: pubspec
@@ -32,4 +35,5 @@ jobs:
           git tag $NEW_TAG
           git push origin $NEW_TAG
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Use PAT for authentication to trigger other workflows
+          GITHUB_TOKEN: ${{ secrets.PAT }}
